--- a/charm/res/layout/charm_settings_activity.xml
+++ b/charm/res/layout/charm_settings_activity.xml
@@ -5,8 +5,11 @@
     android:orientation="vertical" >
 
     <TextView
-        android:layout_width="fill_parent"
+        android:id="@+id/textGyro"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello" />
+        android:layout_margin="5dip"
+        android:text="Gyroscope: "
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </LinearLayout>
