Added SensorDataValues class: storage of latest sensor data. Added ListView to monitor sensor data.

--- a/charm/res/layout/charm_settings_activity.xml
+++ b/charm/res/layout/charm_settings_activity.xml
@@ -1,15 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/textGyro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dip"
-        android:text="Gyroscope: "
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
+<!-- <ScrollView android:id="@+id/scrollView1" android:layout_width="fill_parent" android:layout_height="fill_parent"> -->
+	<LinearLayout
+	    android:layout_width="fill_parent"
+    	android:layout_height="fill_parent"
+    	android:orientation="vertical" >
+	    <LinearLayout
+	        android:id="@+id/linearLayout1"
+	        android:layout_width="match_parent"
+	        android:layout_height="100dip" 
+	        android:background="#DDDDDD">
+	
+	        <TextView
+	            android:id="@+id/textEnableSensing"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="center_vertical"
+	            android:layout_weight="1.5"
+	            android:layout_margin="10dip"
+	            android:text="@string/textEnableSensing"
+	            android:textAppearance="?android:attr/textAppearanceMedium" />
+	
+	        <ToggleButton
+	            android:id="@+id/buttonEnableSensing"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="center_vertical"
+	            android:layout_margin="10dip"
+	            android:text="ToggleButton" />
+	    </LinearLayout>
+	    
+		<!-- <ImageView
+			android:src="@drawable/twocolorline"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:scaleType="fitXY" />
+	    <TextView
+	        android:id="@+id/textProximity"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_margin="10dip"
+	        android:text="Proximity: "
+	        android:textAppearance="?android:attr/textAppearanceMedium" />
+	    <LinearLayout
+	        android:id="horizontalLine1"
+	        android:layout_width="match_parent"
+	        android:layout_height="0.5dip" 
+	        android:background="#DDDDDD"> </LinearLayout> -->
+	    <ListView 
+	        android:id="@+id/listSensorData" 
+        	android:layout_height="wrap_content"                 
+        	android:layout_width="match_parent">
+       	</ListView>
+    </LinearLayout>
+<!-- </ScrollView> -->
 </LinearLayout>
