New UI: Tabs at bottom.

--- a/charm/res/layout/charm_sensor_monitor_activity.xml
+++ b/charm/res/layout/charm_sensor_monitor_activity.xml
@@ -4,7 +4,6 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-<!-- <ScrollView android:id="@+id/scrollView1" android:layout_width="fill_parent" android:layout_height="fill_parent"> -->
 	<LinearLayout
 	    android:layout_width="fill_parent"
     	android:layout_height="fill_parent"
@@ -13,25 +12,31 @@
 	        android:id="@+id/linearLayout1"
 	        android:layout_width="match_parent"
 	        android:layout_height="100dip" 
-	        android:background="#DDDDDD">	
+	        android:background="#E2C33A">	
 	        <TextView
 	            android:id="@+id/textEnableSensing"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:layout_gravity="center_vertical"
 	            android:layout_weight="1.5"
-	            android:layout_margin="15dip"
-	            android:text="@string/textEnableSensing"
-	            android:textStyle="bold"
-	            android:textColor="#777"
-	            android:textAppearance="?android:attr/textAppearanceMedium" />
+	            android:layout_marginLeft="10dip"
+	            android:text="Dashboard"
+	            android:textColor="#EEE"
+	            android:textSize="32dip"
+	            />
 	        <ToggleButton
 	            android:id="@+id/buttonEnableSensing"
-	            android:layout_width="70dip"
-	            android:layout_height="60dip"
+	            android:layout_width="80dip"
+	            android:layout_height="70dip"
 	            android:layout_gravity="center_vertical"
-	            android:layout_margin="10dip"
-	            android:textColor="#888"
+	            android:layout_marginRight="12dip"
+	            android:background="#FFF"
+	            android:gravity="center_vertical|left"
+	            android:paddingLeft="10dip"
+	            android:lines="3"
+	            android:textOn="TAP TO STOP SENSING"
+	            android:textOff="TAP TO START SENSING"
+	            android:textColor="#E2C33A"
 	            android:text="ToggleButton" />
 	    </LinearLayout>
 	    
@@ -59,5 +64,4 @@
         	android:layout_width="match_parent">
        	</ListView>
     </LinearLayout>
-<!-- </ScrollView> -->
 </LinearLayout>
