--- a/charm/res/layout/sensor_list_traditional.xml
+++ b/charm/res/layout/sensor_list_traditional.xml
@@ -4,29 +4,26 @@
 	android:layout_height="match_parent" 
 	android:layout_width="fill_parent" 
 	android:orientation="vertical">
-	
+	<TextView android:text="TextView" 
+		android:id="@+id/sensorListText1" 
+		android:layout_width="wrap_content" 
+		android:layout_height="wrap_content" 
+		android:layout_marginLeft="20dip"
+		android:layout_marginTop="10dip" 
+		android:textColor="#888"
+		android:textAppearance="?android:attr/textAppearanceMedium">
+	</TextView>
 	<LinearLayout android:layout_height="wrap_content" 
 		android:layout_width="wrap_content" 
 		android:id="@+id/linearLayout1" 
-		android:layout_marginTop="15dip"
-		android:layout_marginBottom="15dip" 
 		android:orientation="horizontal">
-		
-		<TextView android:id="@+id/sensorListText1"
-		    android:text="TextView" 			
-			android:gravity="center_vertical"
-			android:layout_width="210dip" 
-			android:layout_height="wrap_content"			
-			android:layout_marginLeft="15dip"			
-			android:textColor="#888"
-			android:textAppearance="?android:attr/textAppearanceMedium">
-		</TextView>
 		<TextView android:id="@+id/sensorListText2" 
 			android:text="TextView" 
-			android:gravity="center_vertical|right"
-			android:layout_height="wrap_content"			
-			android:layout_width="70dip"
-			android:layout_marginLeft="0dip" 
+			android:layout_height="wrap_content" 
+			android:layout_width="wrap_content"
+			android:layout_marginLeft="20dip" 
+			android:layout_marginTop="2dip"
+			android:layout_marginBottom="5dip"
 			android:textColor="#BBB"
 			android:textStyle="bold"
 			android:textAppearance="?android:attr/textAppearanceSmall">
