Experiment-Ready Version 1.0 (Todo: Change sensing part into Service that can run in background even when screen is off, Android Activity is paused, etc)

--- a/charm/res/layout/attribute_list.xml
+++ b/charm/res/layout/attribute_list.xml
@@ -22,7 +22,8 @@
 		    android:text="CheckBox" 
 		    android:textAppearance="?android:attr/textAppearanceMedium"
 		    android:clickable="false"
-		    android:focusable="false"/>
+		    android:focusable="false"
+		    />
 		    <!-- android:focusable="false" -->
 		    
 		
